--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.6",
     "com.unity.feature.development": "1.0.1",
     "com.unity.probuilder": "5.2.4",
     "com.unity.progrids": "3.0.3-preview.6",
